<resources>
    <string name="app_name">Emosic</string>
    <string name="your_phone">Your Phone!</string>
    <string name="phone_number">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="playing_time">playing time</string>

    <string name="sign_out">Sign out</string>
    <string name="select_image_source">Select image source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="camera_perm_denied">Camera Permissions denied</string>
    <string name="camera_perm_denied_permanently">Camera Permissions denied</string>
    <string name="user_data_required_info">Enter all required details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_client_id">866756795982-havtme3a12r0cr30hgrk1paqffkc3490.apps.googleusercontent.com</string>
    <string name="something_went_wrong">Something went wrong, please try again later...</string>
    <string name="remove_from_liked">Remove</string>
    <string name="add_to_liked">Add</string>
    <string name="activity_destroyed">activity_destroyed</string>
    <string name="scroll_to">scroll_to</string>
    <string name="continue_">Continue</string>
    <string name="updating">Updating…</string>
    <string name="a_6_digit_otp_will_be_sent_via_sms_to_verify_your_mobile_number">A 6 digit OTP will be sent via SMS to verify your mobile number.</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_10">Enter 10 digit Mobile Number</string>
    <string name="or">Or</string>
    <string name="emotion_media_player">Emotion Media Player</string>
    <string name="app">App</string>
    <string name="continue_text">Continue</string>
    <string name="app_icon">app_icon</string>
    <string name="hello">Hello!</string>
    <string name="we_are_emp">We are EMP.</string>
    <string name="creating_account_text">Create an account or login to begin adventure.</string>
    <string name="google_logo">google logo</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="mobile_phone_logo">mobile phone logo</string>
    <string name="use_mobile_number">Use Mobile Number</string>
    <string name="didn_t_you_receive_any_code">Didn\'t you receive any code?</string>
    <string name="resend_new_code">RESEND NEW CODE</string>
    <string name="verify">Verify</string>
    <string name="welcome">Welcome</string>
    <string name="song_name">Song Name</string>
    <string name="unknown">unknown</string>
    <string name="sample_playing_time">2:00 / 3:59</string>
    <string name="album_cover">Album Cover</string>
    <string name="previous_song_button">Previous Song Button</string>
    <string name="repeat_button">Repeat Button</string>
    <string name="play_button">Play Button</string>
    <string name="next_song_button">Next Song Button</string>
    <string name="shuffle_button">Shuffle Button</string>
    <string name="emoji_image">Emoji Image</string>
    <string name="select_image_image">Select Image Image</string>
    <string name="select_image">Select Image</string>
    <string name="chose_from_emojis">Chose From Emojis</string>
    <string name="face_to_recognise_mood">Face to recognise mood</string>
    <string name="proceed_button">Proceed Button</string>
    <string name="retake_button">Retake Button</string>
    <string name="proceed">Proceed</string>
    <string name="retake">Retake</string>
    <string name="emoji_mood_text">Emoji Mood Text</string>
    <string name="choose_from_emojis">Choose From Emojis</string>
    <string name="detecting_emotion">Detecting emotion...</string>
    <string name="emotion_detected">Emotion Detected</string>
    <string name="angry">Angry</string>
    <string name="search_song_based_on_detected_emotion">Search songs based on detected emotion</string>
    <string name="no_face_detected">No Face Detected</string>
    <string name="home">Home</string>
    <string name="songs_based_on_detected_emotion">Songs based on detected emotion</string>
    <string name="searching_songs">Searching songs..</string>
    <string name="artist_name">Artist Name</string>
    <string name="lorem">lorem dsd sdjjs hdshjdj  hjdhjd h djsh djshdjshdjshdjshdjshdjshdjshdjshdjshdjshdjshdjshdjshjdh</string>
    <string name="network_error_check_your_network_connection">Network error \nCheck your internet connection</string>
    <string name="retry">Retry</string>
    <string name="out_of_songs">No songs available</string>
    <string name="songs_list_empty">Songs List Empty</string>
    <string name="error_msg">Failed, try again in some time or use alternate method of authentication</string>
    <string name="_1_12">1:12</string>
    <string name="update_song">Update</string>
    <string name="_3_05">3:05</string>
    <string name="tools_text">- -</string>
    <string name="please_wait">Please wait...</string>
    <string name="now_playing">Now Playing</string>
    <string name="dr_ivana_oswald">Dr. Ivana Oswald</string>
    <string name="upload_error">Data upload failed</string>
    <string name="successful_msg">Set up successful</string>
    <string name="loading">Loading..</string>
    <string name="favorites">Favorites</string>
    <string name="you_have_no_liked_songs">you have no liked songs..</string>
    <string name="profile">Profile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="permissions">Permissions</string>
    <string name="permission_granted">Permission granted</string>
    <string name="denied">Denied</string>
    <string name="change">Change</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure, you want to sign out?</string>
    <string name="how_to_use"><i><b><u>How To Use</u></b></i></string>
    <string name="first_line">On the home screen choose the select image button to click an image or use an image from the gallery.</string>
    <string name="second_line">Or choose emotion from the emoji list given below to tell us how you are feeling.</string>
    <string name="third_line">After the recognition of the emotion, The app will load the song according to the mood detected.</string>
    <string name="forth_line">Here you go enjoy your favorite songs that too served according to your mood.</string>
    <string name="how_to_use_">How to use</string>
    <string name="no_songs_found">No songs found...</string>
</resources>