<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/google_black_primary">


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvResult"
        android:text="@string/emotion_detected"
        android:gravity="center"
        android:textColor="@color/white_10"
        android:textSize="22sp"
        android:fontFamily="@font/spartanreg"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        />

    <ImageView
        android:id="@+id/detectedEmotion"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/emoji_image"
        android:scaleType="fitXY"
        tools:src="@drawable/angry_face"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmotion"
        android:text="@string/angry"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="@font/spartanreg"
        android:textColor="@color/white_10"
        app:layout_constraintTop_toBottomOf="@id/detectedEmotion"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSearchSongs"
        android:text="@string/search_song_based_on_detected_emotion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="@color/black_90"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:padding="12dp"
        android:fontFamily="@font/spartanreg"
        app:layout_constraintTop_toBottomOf="@id/tvEmotion"
        />

</androidx.constraintlayout.widget.ConstraintLayout>