<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.SignUpFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.6"
        android:id="@+id/image_and_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_buttons"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/round_icon_card_view"
            app:cardCornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/splash_icon"
                android:layout_width="124dp"
                android:layout_height="124dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/splash_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_icon"/>

        </com.google.android.material.card.MaterialCardView>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hello_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/we_are_text"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold"
            android:textColor="@color/signup_fragment_text"
            android:layout_marginStart="@dimen/common_margin_size"
            android:text="@string/hello"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/we_are_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/common_margin_size"
            android:layout_marginBottom="8dp"
            android:textColor="@color/signup_fragment_text"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold|italic"
            android:text="@string/we_are_emp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/signup_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_and_text"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_or_login_text"
            android:layout_marginStart="@dimen/common_margin_size"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/signup_fragment_text"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/creating_account_text"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="320dp"
            android:layout_height="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/or_text"
            android:id="@+id/gmail_login_botoon"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#38A7EB"
            app:strokeWidth="0.5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/google_logo"
                    android:contentDescription="@string/google_logo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/btnLoginGoogle"
                    android:text="@string/continue_with_google"
                    android:textColor="#38A7EB"
                    android:textSize="14sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/or_text"
            android:text="@string/or"
            android:layout_margin="20dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/signup_fragment_text"
            app:layout_constraintTop_toBottomOf="@id/gmail_login_botoon"
            app:layout_constraintBottom_toTopOf="@id/mobile_login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="320dp"
            android:layout_height="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/mobile_login_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/or_text"
            app:strokeColor="#38A7EB"
            app:strokeWidth="0.5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/mobile_login_logo"
                    android:contentDescription="@string/mobile_phone_logo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/btnLoginPhone"
                    android:text="@string/use_mobile_number"
                    android:textColor="#38A7EB"
                    android:textSize="14sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/progress_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pfSignUp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>