<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="25dp"
        app:cardCornerRadius="12dp"
        android:id="@+id/app_icon_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/figma_launcher_dark"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_size"
        android:text="@string/how_to_use"
        android:id="@+id/how_to_use_text"
        app:layout_constraintTop_toBottomOf="@id/app_icon_img"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"/>



    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/how_to_use_text"
        >
        <TableRow>
            <TextView
                android:layout_column="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="\u25CF "/>
            <TextView
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/first_line"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="\u25CF "/>
            <TextView
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/second_line"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>